k8s/health-hub/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-hub
  namespace: health-hub
spec:
  selector:
    app: health-hub
  ports:
    - port: 8080
      targetPort: http
      name: http
